--- a/src/template.html
+++ b/src/template.html
@@ -65,46 +65,79 @@
     <!-- START PROJECTS SECTION -->
   
   <section id="projects" class="projects-section">
-    <h2 class="projects-section-header">These are some of my projects</h2>
+    <h2 class="projects-section-header">My work</h2>
   
     <div class="projects-grid">
       <a
-        href="https://codepen.io/Reudavel/full/JjdVbNO"
+        href="githubpageslink"
         target="_blank"
         class="project project-tile"
       >
         <img
           class="project-image"
-          src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg"
+          src="./assets/Generic-Hero.jpg"
           alt="project"
         />
         <p class="project-title">
           <span class="code">&lt;</span>
-          Tribute Page
+          Personal website
           <span class="code">&#47;&gt;</span>
         </p>
       </a>
+      <a
+      href="githubpageslink"
+      target="_blank"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="./assets/Generic-Hero.jpg"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        Personal website
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
+    <a
+    href="githubpageslink"
+    target="_blank"
+    class="project project-tile"
+  >
+    <img
+      class="project-image"
+      src="./assets/Generic-Hero.jpg"
+      alt="project"
+    />
+    <p class="project-title">
+      <span class="code">&lt;</span>
+      Personal website
+      <span class="code">&#47;&gt;</span>
+    </p>
+  </a>
+
     </div>
   
-    <a
-      href="https://codepen.io/FreeCodeCamp/"
+    <!--<a
+      href="codepen"
       class="btn btn-show-all"
       target="_blank"
       >Show all<i class="fas fa-chevron-right"></i
     ></a>
-  </section>
+  </section>-->
 
     <!-- START CONTACT SECTION -->
   <section id="contact" class="contact-section">
     <div class="contact-section-header">
       <h2>Let's work together...</h2>
-      <p>How do you take your coffee?</p>
+      <p>Find the solution</p>
     </div>
     <div class="contact-links">
      
       <a
         id="profile-link"
-        href="https://github.com/freecodecamp"
+        href="https://github.com/reudavel"
         target="_blank"
         class="btn contact-details"
         ><i class="fab fa-github"></i> GitHub</a
@@ -125,7 +158,7 @@
     <!-- START FOOTER SECTION -->
     <footer>
       <p>
-        personal web site <!--&copy;-->
+        reudavel <!--&copy;-->
       </p>
       <p>
          2020
