Add function for hamburger menu

--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -28,22 +29,19 @@
   <div id="layout">
     <!-- START NAV -->
     <nav id="navbar" class="nav-container">
-      <div class="nav">
-      <img class="logo" src="./assets/logo2.png" alt="logo"/>
-      <ul class="nav-list">
-      <li>
-          <a href="#welcome">Home</a>
-      </li>
-      <!--<li>
-      <a href="#welcome-section">About</a>
-      </li>-->
-      <li>
-      <a href="#projects">Projects</a>
-      </li>
-      <li>
-      <a href="#contact">Contact</a>
-      </li>
-    </div>
+        <div class="nav">
+          <img class="logo" src="./assets/logo2.png" alt="logo"/>
+          <ul class="nav-list">
+          <li>
+              <a href="#welcome">Home</a>
+          </li>
+          <li>
+              <a href="#projects">Projects</a>
+          </li>
+          <li>
+              <a href="#contact">Contact</a>
+          </li>
+      </div>
   </ul>
     </nav>
     <main>
