--- a/src/template.html
+++ b/src/template.html
@@ -32,17 +32,12 @@
         <div class="nav">
           <img class="logo" src="./assets/logo2.png" alt="logo"/>
           <ul class="nav-list">
-          <li>
-              <a href="#welcome">Home</a>
-          </li>
-          <li>
-              <a href="#projects">Projects</a>
-          </li>
-          <li>
-              <a href="#contact">Contact</a>
-          </li>
-      </div>
-  </ul>
+            <li><a href="#welcome">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+          <div id="hamburger">X</div>
+        </div>
     </nav>
     <main>
   <!-- START WELCOME SECTION -->
