Fixing hamburger menu

--- a/src/template.html
+++ b/src/template.html
@@ -27,18 +27,44 @@
 </head>
 <body>
   <div id="layout">
-    <!-- START NAV -->
-    <nav id="navbar" class="nav-container">
-        <div class="nav">
-          <img class="logo" src="./assets/logo2.png" alt="logo"/>
-          <ul class="nav-list">
-            <li><a href="#welcome">Home</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-          <div id="hamburger">X</div>
+    <!-- START NAV 
+    <header  class="nav-container">
+      <nav id="navbar" class="nav">        
+        <img class="logo" src="./assets/logo2.png" alt="logo"/>
+        <ul class="nav-list">
+          <li><a href="#welcome">Home</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>  
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
         </div>
-    </nav>
+      </nav>
+    </header>-->
+    <header class="nav-container">
+      <nav class="navbar">
+        <a href="#" class="nav-branding">DEV.</a>
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Contact</a>
+          </li>
+        </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
+    </header>
+
     <main>
   <!-- START WELCOME SECTION -->
   <section id="welcome" class="welcome-section">
