Fixed hamburger manu

--- a/src/template.html
+++ b/src/template.html
@@ -43,19 +43,14 @@
         </div>
       </nav>
     </header>-->
-    <header class="nav-container">
-      <nav class="navbar">
-        <a href="#" class="nav-branding">DEV.</a>
+    <header id="navbar" class="nav-container">
+      <nav  class="nav">
+       <img class="logo" src="./assets/logo2.png" alt="logo"/>
+         <!--<a href="#" class="nav-branding">DEV.</a>-->
         <ul class="nav-menu">
-          <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">About</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Contact</a>
-          </li>
+          <li class="nav-item"><a href="#welcome">Home</a></li>
+          <li class="nav-item"><a href="#projects">Projects</a></li>
+          <li class="nav-item"><a href="#contact">Contact</a></li>
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
