--- a/src/template.html
+++ b/src/template.html
@@ -27,22 +27,7 @@
 </head>
 <body>
   <div id="layout">
-    <!-- START NAV 
-    <header  class="nav-container">
-      <nav id="navbar" class="nav">        
-        <img class="logo" src="./assets/logo2.png" alt="logo"/>
-        <ul class="nav-list">
-          <li><a href="#welcome">Home</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>  
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-      </nav>
-    </header>-->
+    <!-- START NAV -->
     <header id="navbar" class="nav-container">
       <nav  class="nav">
        <img class="logo" src="./assets/logo2.png" alt="logo"/>
@@ -59,7 +44,6 @@
         </div>
       </nav>
     </header>
-
     <main>
   <!-- START WELCOME SECTION -->
   <section id="welcome" class="welcome-section">
